@@ -1,3 +1,9 @@
+2006-10-19  Rick Frankel  <rick@gg5.local>
+
+	* lib/iCal/Parser.pm (update_recurrences): fix problem with
+	replacement event (recurrence-id) prior to rrule event
+	in file.
+
 2006-09-10  Rick Frankel  <rick@gg5.local>
 
 	* lib/iCal/Parser.pm (VEVENT): fix problems with alarms on
